[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "aiosqlite==0.20.0",
    "bcrypt==4.0.1",
    "email-validator==2.1.1",
    "fastapi==0.110.3",
    "httpx==0.27.0",
    "itsdangerous==2.2.0",
    "jinja2==3.1.4",
    "passlib[bcrypt]==1.7.4",
    "pydantic==2.7.1",
    "python-multipart==0.0.9",
    "sqlalchemy==2.0.30",
    "typing-extensions>=4.8.0",
    "uvicorn[standard]==0.29.0",
]
